<resources>
    <string name="app_name">RxKotlin2Examples</string>
    <string name="buffer">Buffer</string>
    <string name="flatmap">FlatMap</string>
    <string name="group_by">GroupBy</string>
    <string name="map">Map</string>
    <string name="scan">Scan</string>
    <string name="window">Window</string>
    <string name="transforming_operators">Transforming Operators</string>
    <string name="filtering_observables">Filtering Observables</string>
    <string name="combining_observables">Combining Observables</string>
    <string name="error_handling_operators">Error Handling Operators</string>
    <string name="observable_utility_operators">Observable Utility Operators</string>
    <string name="conditional_and_boolean_operators">Conditional and Boolean Operators</string>
    <string name="mathematical_and_aggregate_operators">Mathematical and Aggregate Operators</string>
    <string name="backpressure_operators">Backpressure Operators</string>
    <string name="connectable_observable_operators">Connectable Observable Operators</string>
    <string name="operators_to_convert_observables">Operators to Convert Observables</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buffer_operator">Buffer Operator</string>
    <string name="do_some_work">Do Some Work</string>
    <string name="debounce">Debounce</string>
    <string name="distinct">Distinct</string>
    <string name="elementat">ElementAt</string>
    <string name="filter">Filter</string>
    <string name="first">First</string>
    <string name="ignore_elements">Ignore Elements</string>
    <string name="last">Last</string>
    <string name="skip">Skip</string>
    <string name="skip_last">Skip Last</string>
    <string name="take">Take</string>
    <string name="take_last">Take Last</string>
    <string name="and_then_when">And /Then/ When</string>
    <string name="combinelatest">CombineLatest</string>
    <string name="join">Join</string>
    <string name="zipObservable">Merge</string>
    <string name="startwith">StartWith</string>
    <string name="switch_">Switch</string>
    <string name="zip">Zip</string>
    <string name="catch_">Catch</string>
    <string name="retry">Retry</string>
    <string name="amb">Amb</string>
    <string name="concat">Concat</string>
    <string name="others">Others</string>
    <string name="creating_observables">Creating Observables</string>
    <string name="create">Create</string>
    <string name="defer">Defer</string>
    <string name="empty_never_throw">Empty/Never/Throw</string>
    <string name="from">From</string>
    <string name="interval">Interval</string>
    <string name="just">Just</string>
    <string name="range">Range</string>
    <string name="repeat">Repeat</string>
    <string name="start">Start</string>
    <string name="timer">Timer</string>
</resources>
