<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fstyle.comparerxjava1vsrxjava2.transform.TransformingActivity"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >
            <Button
                android:id="@+id/btnDebounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debounce"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnDistinct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distinct"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnElementAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elementat"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnIgnoreElements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ignore_elements"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >
            <Button
                android:id="@+id/btnLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnSkipLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_last"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnTake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnTakeLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_last"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</FrameLayout>
