<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fstyle.comparerxjava1vsrxjava2.transform.TransformingActivity"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >
            <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnDefer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defer"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnEmptyNeverThrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_never_throw"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >
            <Button
                android:id="@+id/btnJust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btnTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</FrameLayout>
